# nrs-qq

./: .gitignore  Cargo.toml  README.md
examples/password_login/: Cargo.toml
examples/password_login/src/: lib.rs  main.rs
examples/password_login/src/provider/: channel.rs  engine.rs  mod.rs  mutex.rs  oneshot.rs  rwlock.rs  task.rs  tcp.rs
examples/smol_pwd_login/: Cargo.toml
examples/smol_pwd_login/src/: main.rs
examples/smol_pwd_login/src/handler/: mod.rs
examples/smol_pwd_login/src/provider/: channel.rs  engine.rs  mod.rs  mutex.rs  oneshot.rs  rwlock.rs  task.rs  tcp.rs
nrq-engine/: Cargo.toml
nrs-qq/: Cargo.toml
nrs-qq/src/: lib.rs  provider.rs
nrs-qq/src/client/: api.rs  client.rs  event.rs  mod.rs  net.rs
nrs-qq/src/client/ext/: framed_impl.rs  length_delimited.rs
nrs-qq/src/client/handler/: mod.rs
nrs-qq/src/client/processor/: config_push_svc.rs  message_svc.rs  mod.rs  online_push.rs  reg_proxy_svc.rs  wtlogin.rs
nrs-qq/src/client/processor/c2c/: friend_system_msg.rs  group_system_msg.rs  new_member.rs  private_msg.rs  temp_session.rs
nrs-qq/src/ext/: common.rs  login.rs  reconnect.rs
