[workspace]
members = [
    "nrs-qq",
    "nrq-engine",
    "examples/*"
]
[patch.crates-io]
prost = { git = "https://github.com/a1967629423/prost.git" }
prost-types = { git = "https://github.com/a1967629423/prost.git" }
jcers = {git = "https://github.com/a1967629423/jcers.git"}
jcers_proc = {git = "https://github.com/a1967629423/jcers.git"}