[package]
name = "password_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrs-qq = {path="../../nrs-qq"}
tokio = {version = "1",features=["full"]}
tokio-util = {version = "0.7",features = ["codec"]}
anyhow = "1"
tracing = "0.1"
futures = "0.3"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rand = "0.8"
chrono = "0.4"
no-std-net = "0.6.0"

[profile.release]
opt-level = "s"
overflow-checks = false
debug = 0
strip = true
lto = "thin"
# panic = "abort"